--- a/Download/Views/Product/Index.cshtml
+++ b/Download/Views/Product/Index.cshtml
@@ -6,7 +6,7 @@
 
 }
 
-<div style="background-color: #4f51d0; border: 2px solid #ffffff; padding-left: 2em" class="text-white">
+<div style="background-color: #434d89; border: 2px solid #ffffff; padding-left: 2em; " class="text-white">
     <h2>Welcome to Stonefin Tech Downloads!</h2>
     @if (User.IsInRole("admin") == true || User.IsInRole("member") == true)
     {
@@ -27,12 +27,6 @@
         even more awesome downloadable stuff!
     </div>
     }
-    <br />
-    <div class="body-content text-muted" style="font-size: 20px">
-        Use the search to find the product you want, or
-        do a blank search to browse through all available
-        products
-    </div>
     <br />
 </div>
 <br />
