--- a/Download/Views/Shared/_Layout.cshtml
+++ b/Download/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
 
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top" style="background-color: #4f51d0">
+    <div class="navbar navbar-inverse navbar-fixed-top" style="background-color: #434d89;">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -30,7 +30,7 @@
             </div>
         </div>
     </div>
-    <div class="container body-content">
+    <div class="container body-content" style="background-color: rgba(0, 0, 0, 0.15); border: 2px solid #434d89; ">
         @RenderBody()
         <hr />
         <footer>
