--- a/Download/Content/bootstrap.css
+++ b/Download/Content/bootstrap.css
@@ -315,7 +315,7 @@ body {
   font-size: 14px;
   line-height: 1.428571429;
   color: #333333;
-  background-color: #31be41;
+  background-color: #ffffff;
 }
 
 input,
@@ -341,7 +341,7 @@ a {
 
 a:hover,
 a:focus {
-  background-color: rgba(202, 202, 202, 0.81);
+  background-color: rgba(255, 255, 255, 0.20);
   color: #2a6496;
   text-decoration: underline;
 }
@@ -387,7 +387,7 @@ hr {
   margin-top: 20px;
   margin-bottom: 20px;
   border: 0;
-  border-top: 1px solid #eeeeee;
+  border-top: 1px solid #434d89;
 }
 
 .sr-only {
@@ -1488,12 +1488,20 @@ th {
 .table-striped > tbody > tr:nth-child(odd) > td,
 .table-striped > tbody > tr:nth-child(odd) > th {
   background-color: #f9f9f9;
+  
+}
+
+.table-hover > tbody > tr:hover {
+      border: 2px solid #ffffff;
 }
 
 .table-hover > tbody > tr:hover > td,
 .table-hover > tbody > tr:hover > th {
-  background-color: #f5f5f5;
+  background-color: #434d89;
+  color: #ffffff;
+
 }
+
 
 table col[class*="col-"] {
   display: table-column;
@@ -2097,7 +2105,7 @@ fieldset[disabled] .btn-default.active {
 
 .btn-primary {
   color: #ffffff;
-  background-color: #428bca;
+  background-color: #434d89;
   border-color: #ffffff;
 }
 
@@ -2106,9 +2114,9 @@ fieldset[disabled] .btn-default.active {
 .btn-primary:active,
 .btn-primary.active,
 .open .dropdown-toggle.btn-primary {
-  color: #ffffff;
-  background-color: #3276b1;
-  border-color: #285e8e;
+  color: #434d89;
+  background-color: #ffffff;
+  border-color: #434d89;
 }
 
 .btn-primary:active,
