--- a/Download/Views/Product/Create.cshtml
+++ b/Download/Views/Product/Create.cshtml
@@ -25,7 +25,7 @@
             <div class="col-md-10">
                 <p>
                     @Html.EditorFor(model => model.ProductName)
-                  <h:message class="text-danger">@message</h:message>   
+                    @Html.ValidationMessageFor(model => model.ProductName)   
                 </p>
 
             </div>
