--- a/Download/Views/Users/Index.cshtml
+++ b/Download/Views/Users/Index.cshtml
@@ -10,9 +10,9 @@
 
 <h2>All Users</h2>
 
-<table class="table table-hover" style="background-color: rgba(255, 255, 255, 0.50); border: 2px solid #ffffff">
+<table class="table table-hover" style="background-color: rgba(255, 255, 255, 0.50);">
     <thead>
-        <tr style="border: 2px solid #ffffff">
+        <tr >
             <th>
                 @Html.Encode("User Name")
             </th>
@@ -40,7 +40,7 @@
 
         @foreach (var item in Model)
         {
-            <tr>
+            <tr style="border: 2px">
                 <td>
                     @Html.DisplayFor(modelItem => item.UserName)
                 </td>
