--- a/Download/Views/Product/Display.cshtml
+++ b/Download/Views/Product/Display.cshtml
@@ -10,42 +10,43 @@
 
 }
 
-<h2>@Model.ProductName</h2>
-<hr />
+<h2 style="margin-bottom: 0px;">@Model.ProductName</h2>
+<hr style="margin-top: 0px;" />
 @*Check to see if there are any versions available for display/download*@
-@if (Model.Versions.Count() > 0)
-{
-    <div class="body-content form-horizontal clearfix">
+<div class="body-content form-horizontal clearfix">
+    @if (Model.Versions.Count() > 0)
+    {
 
 
 
-        @foreach (var version in Model.Versions)
+
+        foreach (var version in Model.Versions)
         {
-            <dl class="dl-horizontal">
-                <dt>
-                    @Html.DisplayNameFor(model => version.VersionName)
-                </dt>
-                <dd>
+            <div class="form-group">
+                <div class="col-md-1">
+                    <b>@Html.DisplayNameFor(model => version.VersionName)</b>
+                </div>
+                <div class="col-md-1">
                     @Html.Encode(version.VersionName)
-                </dd>
-            </dl>
+                </div>
+            </div>
             break;
         }
 
-        @foreach (var date in Model.Versions)
+        foreach (var date in Model.Versions)
         {
-            <dl class="dl-horizontal">
-                <dt>
-                    @Html.Encode("Date Uploaded")
-                </dt>
-                <dd>
+            <div class="form-group">
+                <div class="col-md-1">
+                    <b>@Html.Encode("Date Uploaded")</b>
+                </div>
+                <div class="col-md-2">
                     @Html.DisplayFor(model => date.DateCreated)
-                </dd>
-            </dl>
+                </div>
+            </div>
             break;
         }
         <div class="text-danger">@ViewBag.Message</div>
-        <div class="form-group clearfix">
+        <div class="form-group clearfix" style="border: 2px solid #ffffff; margin-bottom: 0px; border-bottom: 0px;">
             @foreach (var version in Model.Versions)
             {
 
@@ -57,7 +58,7 @@
                         using (Html.BeginForm("Download", "Product", new { id = Model.Id, fileName = arch.Installer, verId = version.VersionId, archId = arch.ArchiveId, searchString = search, page = pageNum }, FormMethod.Post, new { @class = "col-md-3" }))
                         {
                             <b>@arch.Installer</b><br />
-                            <input type="submit" value="Download Installer" class="btn btn-primary" />
+                            <input type="submit" value="Download Installer" class="btn btn-primary" style="margin-bottom: 4px;" />
 
                         }
                     }
@@ -77,57 +78,47 @@
             <br />
 
         </div>
-        @if (Model.Versions[0].ExtraFiles.Count() != 0)
-        {
-            <hr />
-            <h5><b>Extra Files</b></h5>
-            <hr />
-        }
+        <div class="form-group clearfix" style="border: 2px solid #ffffff; margin-top: 0px; margin-bottom: 0px;">
 
-        @foreach (var version in Model.Versions)
-        {
-            <div class="form-group clearfix">
-                @foreach (var ex in version.ExtraFiles)
+            @foreach (var version in Model.Versions)
+            {
+
+                if (Model.Versions[0].ExtraFiles.Count() != 0)
+                {
+                    <h5 style="margin-bottom: 0px;"><b>Extra Files</b></h5>
+                    <hr style="margin-top: 0px;" />
+                }
+                foreach (var ex in version.ExtraFiles)
                 {
                     if (ex != null)
                     {
                         <div class="col-md-3">
 
-                            <b> @Html.DisplayFor(model => ex.FileName) </b><br />
+                            <b> @Html.DisplayFor(model => ex.FileName) </b>
+                            @using (Html.BeginForm("Download", "Product", new { id = Model.Id, fileName = ex.FileName, fileId = ex.ExtraFileId, verId = version.VersionId, searchString = search, page = pageNum }, FormMethod.Post))
+                            {
+
+                                <input type="submit" value="Download" class="btn btn-sm" />
+
+                            }
                             <i>@Html.DisplayFor(model => ex.FileDescription)</i><br />
                         </div>
                     }
                 }
-            </div>
-            <div class="form-group">
-                @foreach (var ex in version.ExtraFiles)
-                {
-                    if (ex != null)
-                    {
 
-                        using (Html.BeginForm("Download", "Product", new { id = Model.Id, fileName = ex.FileName, fileId = ex.ExtraFileId, verId = version.VersionId, searchString = search, page = pageNum }, FormMethod.Post, new { @class = "col-md-3" }))
-                        {
-
-                            <input type="submit" value="Download" class="btn btn-primary" />
-
-                        }
-                    }
-                }
-            </div>
 
                 break;
-        }
+            }
 
-
-        <div>
+        </div>
+        <div style="border: 2px solid #ffffff; border-top: 0px; margin-top: 0px; margin-bottom: 0px;" class="clearfix form-group">
             @*If there is more than just the version being shown up above, display links to the additional versions*@
             @if (Model.Versions.Count() > 1)
             {
-                <hr />
-                <h4>Archived Versions</h4>
+                <h4 style="margin-bottom: 0px;">Archived Versions</h4>
+                <hr style="margin-top: 0px;" />
             }
-            <div>
-                <table>
+
                     @foreach (var version in Model.Versions)
                     {
                         //Skip the first version becuase it is being displayed
@@ -137,29 +128,28 @@
                         }
                         else
                         {
-                            <tr>
-                                <td>
                                     @*table of archived versions for this product*@
-                                    @Html.ActionLink(version.VersionName, "Display", new { id = Model.Id, VersionId = version.VersionId, searchString = search, page = pageNum })
-                                </td>
-                            </tr>
+                                    @Html.ActionLink(version.VersionName, "Display", new { id = Model.Id, VersionId = version.VersionId, searchString = search, page = pageNum })<br />
+
                         }
                     }
-                </table>
-            </div>
-        </div>
-        <hr />
-        <h3>Read Me</h3>
-        <hr />
-        <div class="col-md-12" style="background-color: rgba(0, 0, 0, 0.15); border: 2px solid #ffffff;">
 
+        </div>
+      <div class="form-group clearfix" style="border: 2px solid #ffffff; border-top: 0px; margin-top: 0px">
+        <h3 style="margin-bottom: 0px;">Read Me</h3>
+          <hr style="margin-top: 0px;"/>
+
+
+          <div style="margin-left: 20px">
             @*Display the Markdown readme that was converted to html*@
             @Html.Raw(file)
+              </div>
         </div>
 
 
-    </div>
-}
+
+    }
+</div>
 @if (User.IsInRole("admin") == true || User.IsInRole("member") == true)
 {
     <h3>@ViewBag.Message1</h3>
